tests/verify/verify17.out
definition of x[1:3 ..1:3]: warning
  Syntax error in definition of x
  │ 
1 │ external val x : int = "x x"
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

definition of x[1:3 ..1:3]: error
  Unexpected x, expected one of and, or, '+', '-', '*', '/', '%', '..', '==', '~=', '<', '>', '<=', '>='
  │ 
1 │ x x
  │   ^
